Revision history for Neo4j::Driver

0.38  2023-06-18

 - Mitigate more test failures on slow machines and on Perl v5.14 and older.

0.37  2023-02-27  (TRIAL RELEASE)

 - Add deprecation warning to node and relationship id() methods on Neo4j 5
 - Fix a bug introduced in 0.36 which prevented some Bolt server/network errors
   from being reported correctly.
 - Mitigate test failures on slow machines and on Perl v5.10

0.36  2023-02-05

 - Add support for managed transaction functions.
 - Add "error" event, which makes details of server and network errors
   available to plug-ins as a Neo4j::Error object. (GH #7)

0.35  2023-01-24

 - Fix an issue which could cause a Bolt v3/v4 session to report
   "Bolt error -1" and become unusable after a server-side statement
   evaluation failure inside an explicit transaction.

0.34  2023-01-22

 - Refactor experimental plug-in API:
   - Rename PluginManager to Events, add_event_handler() to add_handler(),
     trigger_event() to trigger().
   - Specify behaviour of HTTP adapters for internal error responses generated
     by the network library.
   - Deprecate adding plug-ins by module name; use plug-in instance instead.
 - Deprecate experimental internal http_timeout setting; use config() instead.
 - Fix support for non-standard database name in explicit transaction on Bolt
 - Fix support for transaction begin on Bolt v1/v2

0.33  2022-12-30

 - Fix documentation to indicate that the Neo4j 5 non-numeric element ID for
   nodes and relationships is not yet supported with Bolt in Perl at this time.

0.32  2022-12-29

 - Introduce Neo4j 5 non-numeric element ID for nodes and relationships
 - Fix test suite for Neo4j 5
 - Improve IPv6 support
 - Add possible strategies to resolve HTTP connection problems when using
   dual-stack host names (e. g. localhost) to driver documentation

0.31  2022-06-13

 - Replace experimental net_module config option with plug-in interface
 - The cypher_params config option is no longer experimental