@@ -25,7 +25,7 @@ PodWeaver.skip = TODO.pod$
 ; preferable to erring on the side of listing too few.
 [AutoPrereqs]
 ; don't mention modules that have been in core since the minimum supported Perl version
-skip = ^(lib|overload|strict|utf8|warnings)$
+skip = ^(if|lib|overload|strict|utf8|warnings)$
 skip = ^(Carp|List::Util|Scalar::Util|Time::HiRes)$
 skip = ^(Digest::MD5|File::Basename)$
 ; URI::_server is part of URI, which is included by AutoPrereqs
