@@ -3,9 +3,11 @@ use strict;
 use warnings;
 use lib qw(./lib t/lib);
 
-use Test::More 0.88;
+use Test::More 0.94;
 use Test::Exception;
-use Test::Warnings;
+use Test::Warnings 0.010 qw(:no_end_test);
+my $no_warnings;
+use if $no_warnings = $ENV{AUTHOR_TESTING} ? 1 : 0, 'Test::Warnings';
 
 
 # Test ServerInfo and report info on the connection with the server.
@@ -13,7 +15,7 @@ use Test::Warnings;
 use Neo4j_Test;
 use Neo4j_Test::MockHTTP;
 
-plan tests => 4 + 1;
+plan tests => 4 + $no_warnings;
 
 
 subtest 'full' => sub {
