@@ -5,7 +5,9 @@ use lib qw(./lib t/lib);
 
 use Test::More 0.94;
 use Test::Exception;
-use Test::Warnings;
+use Test::Warnings 0.010 qw(:no_end_test);
+my $no_warnings;
+use if $no_warnings = $ENV{AUTHOR_TESTING} ? 1 : 0, 'Test::Warnings';
 
 
 # The execute_... group of methods are used to run managed transactions
@@ -20,7 +22,7 @@ use Neo4j_Test;
 use Neo4j_Test::EchoHTTP;
 use Neo4j_Test::MockQuery;
 
-plan tests => 8 + 1;
+plan tests => 8 + $no_warnings;
 
 
 my ($d, $s, $r, @r);
