@@ -15,9 +15,13 @@ BEGIN {
 
 # The following tests pertain to database sessions.
 
-use Test::More 0.96 tests => 3 + 1;
+use Test::More 0.94;
 use Test::Exception;
-use Test::Warnings;
+use Test::Warnings 0.010 qw(:no_end_test);
+my $no_warnings;
+use if $no_warnings = $ENV{AUTHOR_TESTING} ? 1 : 0, 'Test::Warnings';
+
+plan tests => 3 + $no_warnings;
 
 
 my ($s);
