@@ -16,9 +16,14 @@ my $s = $driver->session;  # only for autocommit transactions
 
 # These tests are for the result summary and statistics.
 
-use Test::More 0.96 tests => 5 + 2;
+use Test::More 0.94;
 use Test::Exception;
-use Test::Warnings;
+use Test::Warnings 0.010 qw(:no_end_test);
+my $no_warnings;
+use if $no_warnings = $ENV{AUTHOR_TESTING} ? 1 : 0, 'Test::Warnings';
+
+plan tests => 5 + 1 + $no_warnings;
+
 my $transaction = $driver->session->begin_transaction;
 
 
