@@ -22,9 +22,14 @@ my $s = $driver->session;  # only for autocommit transactions
 # https://metacpan.org/pod/Cpanel::JSON::XS#JSON-%3E-PERL
 # https://metacpan.org/pod/Mojo::JSON::MaybeXS#Upgraded-Numbers
 
-use Test::More 0.96 tests => 4 + 5 + 3 + 2;
+use Test::More 0.94;
 use Test::Exception;
-use Test::Warnings qw(warnings);
+use Test::Warnings 0.010 qw(warnings :no_end_test);
+my $no_warnings;
+use if $no_warnings = $ENV{AUTHOR_TESTING} ? 1 : 0, 'Test::Warnings';
+
+plan tests => 4 + 5 + 3 + 1 + $no_warnings;
+
 use JSON::PP ();
 my $transaction = $driver->session->begin_transaction;
 $transaction->{return_stats} = 0;  # optimise sim
