@@ -18,9 +18,13 @@ my $s = $driver->session;
 # compatibility with related modules like REST::Neo4p works as it should.
 # (So far, we provide very little.)
 
-use Test::More 0.96 tests => 2 + 1;
+use Test::More 0.94;
 use Test::Exception;
-use Test::Warnings;
+use Test::Warnings 0.010 qw(:no_end_test);
+my $no_warnings;
+use if $no_warnings = $ENV{AUTHOR_TESTING} ? 1 : 0, 'Test::Warnings';
+
+plan tests => 2 + $no_warnings;
 
 
 my ($q);
