@@ -23,12 +23,14 @@ my $s = $driver->session;
 
 use Test::More 0.94;
 use Test::Exception;
-use Test::Warnings qw(warnings);
+use Test::Warnings 0.010 qw(warnings :no_end_test);
+my $no_warnings;
+use if $no_warnings = $ENV{AUTHOR_TESTING} ? 1 : 0, 'Test::Warnings';
 
 
 my ($q, $r);
 
-plan tests => 4 + 1;
+plan tests => 4 + $no_warnings;
 
 
 subtest 'result: list() repeated' => sub {
