@@ -3,6 +3,7 @@ Revision history for Neo4j::Driver
 0.38  2023-06-18
 
  - Mitigate more test failures on slow machines and on Perl v5.14 and older.
+ - Tests no longer fail for unexpected warnings, except during author testing.
 
 0.37  2023-02-27  (TRIAL RELEASE)
 
